<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File Manager</string>
    <string name="Back">Back</string>
    <string name="path_will_go_here">path will go here</string>
    <string name="Create">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="path_is">path is</string>
    <string name="Delete">Delete</string>
    <string name="Copy">Copy</string>
    <string name="Paste">Paste</string>
    <string name="Move">Move</string>
    <string name="Display">Display</string>
    <string name="Text_color">Text color</string>
    <string name="Change_the_preferred_text_color">Change the preferred text color</string>
    <string name="Show_hidden_files_folders">Show hidden files/folders</string>
    <string name="Display_f_f">Display files and folders that begin with a (period)</string>
    <string name="Show_Image_Preview">Show Image Preview</string>
    <string name="Display_thumbnail">Display a thumbnail for image files</string>
    <string name="Sorting">Sorting</string>
    <string name="Sorting_type">Sorting type</string>
    <string name="Choose_sort_type">Choose how to sort files and folders</string>
    <string name="usb_in">usb in</string>
    <string name="usb_out">usb out</string>
    <string name="sdcard_in">sdcard in</string>
    <string name="sdcard_out">sdcard out</string>
    <string name="Multi_select_off">Multi-select off</string>
    <string name="flash_in">extern sdcard in</string>
    <string name="flash_out">extern sdcard out</string>
    <string name="open_file">select the type of file</string>
    <string name="text">text</string>
    <string name="audio">audio</string>
    <string name="video">video</string>
    <string name="image">image</string>
    <string name="New_Directory">New Directory</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Quit">Quit</string>
    <string name="Multiselect">Multiselect</string>
    <string name="Folder_operations">Folder operations</string>
    <string name="Delete_Folder">Delete Folder</string>
    <string name="Rename_Folder">Rename Folder</string>
    <string name="Copy_Folder">Copy Folder</string>
    <string name="Move_Folder">Move(Cut) Folder</string>
    <string name="Zip_Folder">Zip Folder</string>
    <string name="Paste_into_folder">Paste into folder</string>
    <string name="Extract_here">Extract here</string>
    <string name="File_Operations">File Operations</string>
    <string name="Delete_File">Delete File</string>
    <string name="Rename_File">Rename File</string>
    <string name="Copy_File">Copy File</string>
    <string name="Move_File">Move(Cut) File</string>
    <string name="Email_File">Email File</string>
    <string name="Warning">Warning</string>
    <string name="Deleting">Deleting </string>
    <string name="cannot_be_undone"> cannot be undone. Are you sure you want to delete?</string>
    <string name="Holding">Holding </string>
    <string name="no_permission">You do not have permission to unzip</string>
    <string name="Create_Directory">Create New Directory</string>
    <string name="Folder">Folder </string>
    <string name="created">created</string>
    <string name="not_created">New folder was not created</string>
    <string name="Rename">Rename</string>
    <string name="be_renamed"> was renamed to </string>
    <string name="not_renamed"> was not renamed</string>
    <string name="Search_file">Search for a file</string>
    <string name="Press_back">Press back again to quit.</string>
    <string name="Black">Black</string>
    <string name="Magenta">Magenta</string>
    <string name="Yellow">Yellow</string>
    <string name="Red">Red</string>
    <string name="Cyan">Cyan</string>
    <string name="Blue">Blue</string>
    <string name="Green">Green</string>
    <string name="Change_text_color">Change text color</string>
    <string name="Sort_by">Sort by...</string>
    <string name="None">None</string>
    <string name="Alphabetical">Alphabetical</string>
    <string name="Type">Type</string>
    <string name="Activity_No_Found">can not find this app</string>
    <string name="Bluetooth_File">send by Bluetooth</string>
    <string name="Cant_read_folder">Can not read folder due to permissions</string>
    <string name="Extract_to">Extract to...</string>
    <string name="extract">Extract</string>
    <string name="to_extract">to extract</string>
    <string name="count_not_open_pdf">Sorry, could not find a pdf viewer</string>
    <string name="count_not_open_html">Sorry, could not find a HTML viewer</string>
	<string name="count_not_open_word">Sorry, could not find a word viewer</string>
	<string name="count_not_open_excel">Sorry, could not find a excel viewer</string>
    <string name="count_not_open_ppt">Sorry, could not find a ppt viewer</string>
    <string name="count_not_open">Sorry, could not find anything</string>
    <string name="to_open">to open</string>
    <string name="new_file">New File</string>
    <string name="select_all">Select All</string>
    <string name="cancel_file_operation">Cancel File Operation</string>
    <string name="app_management">Application Management</string>
    <string name="property">Property</string>
    <string name="file_property">File Property</string>
    <string name="sure">sure</string>
    <string name="music">Music</string>
    <string name="picture">Picture</string>
    <string name="movie">Movie</string>
    <string name="ebook">Ebook</string>
    <string name="apk">Apk</string>
    <string name="no_select">No item select</string>
    <string name="files">file(s)</string>
    <string name="delete_msg1">Are you sure you want to delete</string>
    <string name="delete_msg2">files? This cannot be undone.</string>
    <string name="search_title">Searching</string>
    <string name="search_msg">Searching current file system...</string>
    <string name="copy_title">Copying</string>
    <string name="copy_msg">Copying file...</string>
    <string name="unzip_title">Unzipping</string>
    <string name="unzip_msg">Unpacking zip file please wait...</string>
    <string name="zip_title">Zipping</string>
    <string name="zip_msg">Zipping folder...</string>
    <string name="delete_title">Deleting</string>
    <string name="delete_msg">Deleting files...</string>
    <string name="could_not_find">Could not find</string>
    <string name="find">Found</string>
    <string name="copied_pasted_success">File successfully copied and pasted</string>
    <string name="copy_pasted_failed">Copy pasted failed</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="no_input">No Input</string>
    <string name="not_save_file_title">Not Save File</string>
    <string name="not_save_file_msg">Whether to close the current document without saving?</string>
    <string name="save_to">Save To</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading file...</string>
	<string name="lack_storage_space">Lack of storage space!</string>
	
    
</resources>
