<?xml version="1.0" encoding="utf-8"?>
<!-- designed by lizihao@actions-semi.com -->
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:minWidth="260dp"
	android:minHeight="170dp"
	android:padding="5dp"
	>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:text="@string/path_will_go_here"
		android:textColor="@color/black"
		android:id="@+id/input_label"/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1" >
		<ImageView
			android:id="@+id/input_icon"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="4"/>
		<EditText
			android:id="@+id/input_inputText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:selectAllOnFocus="true"
			android:inputType="none"
			android:maxLength="30" />
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:gravity="bottom"
		>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/Create"
			android:enabled="true"
			android:id="@+id/input_create_b"
			/>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/Cancel"
			android:enabled="true"
			android:id="@+id/input_cancel_b"
			/>
	</LinearLayout>
</LinearLayout>